# atari-sparse-transfer

./: .gitignore  README.md  check_config.py  check_minatar.py  debug_lth_runs.py  export_baselines.py  export_returns.py  matched_checkpoints.csv  plot_lth_iqm.py  plot_lth_ticket_exists_from_epsilon.py  pyproject.toml  reproduce_issue.py  requirements.txt  results_baselines.csv  results_baselines_k2000.csv  results_lottery.csv  results_lottery_k1000.csv  results_lottery_k2000.csv  rlp-25  runs-90.txt  runs-gmp.csv  test_pruning.py  verify_env.py
area-ratio/: area_ratio_summary.csv  compare-runs.py  compare-transfer.py  generate_table.py
configs/: atari-gmp.yaml  atari-lth.yaml  atari.yaml  config.yaml  ddqn-baseline.yaml  ddqn-gmp-60.yaml  minatar-asterix-gmp-70.yaml  minatar-breakout-gmp-70.yaml  minatar-dense-baseline.yaml  minatar-gmp.yaml  minatar-lth.yaml  minatar-pong-gmp-70.yaml  minatar-space-invaders-gmp-70.yaml  minatar-sparse-baseline.yaml  minatar-transfer.yaml  minatar.yaml  minatar_lth.yaml  test_order.yaml  test_sparsity.yaml  transfer-lth-1.txt  transfer-lth-2.txt  transfer-lth.txt
dispatcher/: dispatch_minatar_sweep.py  dispatch_runs_90.py  dispatch_sweep.py  dispatch_tickets.py  train.sh
docs/: UML.md
proposal/: main.bib  main.tex  rlj.bst  rlj.sty
scripts/: match_checkpoints.py  scrape_models.py  sort_checkpoints_csv.py
tests/: test_artifact_init.py  test_dqn_pruner.py  test_gmp_pruner.py  test_initialization_correctness.py  test_lottery.py  test_lottery_integration.py  test_lottery_sparsity.py  test_minatar_env.py  test_resume.py  (+2 more)
(+53 files in other folders)
