[project]
name = "rlp-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium>=1.2.2",
    "markupsafe>=3.0.3",
    "minatar==1.0.13",
    "opencv-python>=4.12.0.88",
    "tensorboard>=2.20.0",
    "tyro>=0.9.35",
    "wandb>=0.23.0",
    "omegaconf>=2.3.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "hydra-core>=1.3.2",
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
